source/debris/testz/parsetest05.output
Nonterminals useless in grammar

    value
    simpleexpr
    sequence_end
    fakelvalue
    fakelvalueBricks
    nullifiable


Rules useless in grammar

   51 nullifiable: nullifiable_nonifthen
   52            | ifthen


State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 11 conflicts: 5 reduce/reduce
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 4 shift/reduce
State 17 conflicts: 5 reduce/reduce
State 18 conflicts: 1 shift/reduce, 3 reduce/reduce
State 36 conflicts: 12 reduce/reduce
State 37 conflicts: 12 reduce/reduce
State 38 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce, 3 reduce/reduce
State 48 conflicts: 1 shift/reduce, 3 reduce/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 2 reduce/reduce
State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | program block EOL

    3 item: NUMBER
    4     | OPEN block CLOSED

    5 conditional: ifthen
    6            | ifthenelse

    7 lvalueBricks: VAR
    8             | lvalueBricks NTH item
    9             | lvalueBricks NTH VAR

   10 lvalue: lvalueBricks
   11       | lvalueBricks conditional

   12 assignment: lvalue ASSIGN chain

   13 rvalue: item
   14       | lvalue
   15       | conditional
   16       | assignment

   17 product: rvalue
   18        | product TIMES rvalue

   19 sum: product
   20    | sum PLUS product

   21 chainBricks: sum
   22            | chainBricks sum

   23 chain: chainBricks
   24      | chainBricks assignment
   25      | chainBricks conditional

   26 ifthenelse: IF block THEN block_nonifthen ELSE chain

   27 ifthen: IF block THEN chain

   28 block: block_ifthen
   29      | block_nonifthen

   30 block_ifthen: sequence_ifthen
   31             | ifthen
   32             | sequence_nonifthen ifthen
   33             | sequence_ifthen ifthen

   34 block_nonifthen: sequence_nonifthen
   35                | nullifiable_nonifthen
   36                | sequence_nonifthen nullifiable_nonifthen
   37                | sequence_ifthen nullifiable_nonifthen

   38 nullifiable_nonifthen: chain
   39                      | assignment
   40                      | ifthenelse

   41 nullified_ifthen: ifthen NULLIFY
   42                 | nullified_ifthen NULLIFY

   43 nullified_nonifthen: nullifiable_nonifthen NULLIFY
   44                    | nullified_nonifthen NULLIFY

   45 sequence_ifthen: nullified_ifthen
   46                | sequence_ifthen nullified_ifthen
   47                | sequence_nonifthen nullified_ifthen

   48 sequence_nonifthen: nullified_nonifthen
   49                   | sequence_nonifthen nullified_nonifthen
   50                   | sequence_ifthen nullified_nonifthen


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER <i> (258) 3
    VAR <i> (259) 7 9
    OPEN (260) 4
    CLOSED (261) 4
    NTH (262) 8 9
    TIMES (263) 18
    PLUS (264) 20
    NULLIFY (265) 41 42 43 44
    EOL (266) 2
    ASSIGN (267) 12
    IF (268) 26 27
    THEN (269) 26 27
    ELSE (270) 26


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    program <a> (17)
        on left: 1 2
        on right: 0 2
    item <a> (18)
        on left: 3 4
        on right: 8 13
    conditional <a> (19)
        on left: 5 6
        on right: 11 15 25
    lvalueBricks <r> (20)
        on left: 7 8 9
        on right: 8 9 10 11
    lvalue <r> (21)
        on left: 10 11
        on right: 12 14
    assignment <a> (22)
        on left: 12
        on right: 16 24 39
    rvalue <a> (23)
        on left: 13 14 15 16
        on right: 17 18
    product <a> (24)
        on left: 17 18
        on right: 18 19 20
    sum <a> (25)
        on left: 19 20
        on right: 20 21 22
    chainBricks <a> (26)
        on left: 21 22
        on right: 22 23 24 25
    chain <a> (27)
        on left: 23 24 25
        on right: 12 26 27 38
    ifthenelse <a> (28)
        on left: 26
        on right: 6 40
    ifthen <a> (29)
        on left: 27
        on right: 5 31 32 33 41
    block <a> (30)
        on left: 28 29
        on right: 2 4 26 27
    block_ifthen <a> (31)
        on left: 30 31 32 33
        on right: 28
    block_nonifthen <a> (32)
        on left: 34 35 36 37
        on right: 26 29
    nullifiable_nonifthen <a> (33)
        on left: 38 39 40
        on right: 35 36 37 43
    nullified_ifthen <a> (34)
        on left: 41 42
        on right: 42 45 46 47
    nullified_nonifthen <a> (35)
        on left: 43 44
        on right: 44 48 49 50
    sequence_ifthen <a> (36)
        on left: 45 46 47
        on right: 30 33 37 46 50
    sequence_nonifthen <a> (37)
        on left: 48 49 50
        on right: 32 34 36 47 49


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • block EOL

    $end    shift, and go to state 2
    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    item                   go to state 7
    conditional            go to state 8
    lvalueBricks           go to state 9
    lvalue                 go to state 10
    assignment             go to state 11
    rvalue                 go to state 12
    product                go to state 13
    sum                    go to state 14
    chainBricks            go to state 15
    chain                  go to state 16
    ifthenelse             go to state 17
    ifthen                 go to state 18
    block                  go to state 19
    block_ifthen           go to state 20
    block_nonifthen        go to state 21
    nullifiable_nonifthen  go to state 22
    nullified_ifthen       go to state 23
    nullified_nonifthen    go to state 24
    sequence_ifthen        go to state 25
    sequence_nonifthen     go to state 26


State 2

    0 $accept: program $end •

    $default  accept


State 3

    3 item: NUMBER •

    $default  reduce using rule 3 (item)


State 4

    7 lvalueBricks: VAR •

    $default  reduce using rule 7 (lvalueBricks)


State 5

    4 item: OPEN • block CLOSED

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    item                   go to state 7
    conditional            go to state 8
    lvalueBricks           go to state 9
    lvalue                 go to state 10
    assignment             go to state 11
    rvalue                 go to state 12
    product                go to state 13
    sum                    go to state 14
    chainBricks            go to state 15
    chain                  go to state 16
    ifthenelse             go to state 17
    ifthen                 go to state 18
    block                  go to state 27
    block_ifthen           go to state 20
    block_nonifthen        go to state 21
    nullifiable_nonifthen  go to state 22
    nullified_ifthen       go to state 23
    nullified_nonifthen    go to state 24
    sequence_ifthen        go to state 25
    sequence_nonifthen     go to state 26


State 6

   26 ifthenelse: IF • block THEN block_nonifthen ELSE chain
   27 ifthen: IF • block THEN chain

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    item                   go to state 7
    conditional            go to state 8
    lvalueBricks           go to state 9
    lvalue                 go to state 10
    assignment             go to state 11
    rvalue                 go to state 12
    product                go to state 13
    sum                    go to state 14
    chainBricks            go to state 15
    chain                  go to state 16
    ifthenelse             go to state 17
    ifthen                 go to state 18
    block                  go to state 28
    block_ifthen           go to state 20
    block_nonifthen        go to state 21
    nullifiable_nonifthen  go to state 22
    nullified_ifthen       go to state 23
    nullified_nonifthen    go to state 24
    sequence_ifthen        go to state 25
    sequence_nonifthen     go to state 26


State 7

   13 rvalue: item •

    $default  reduce using rule 13 (rvalue)


State 8

   15 rvalue: conditional •

    $default  reduce using rule 15 (rvalue)


State 9

    8 lvalueBricks: lvalueBricks • NTH item
    9             | lvalueBricks • NTH VAR
   10 lvalue: lvalueBricks •
   11       | lvalueBricks • conditional

    NTH  shift, and go to state 29
    IF   shift, and go to state 6

    IF        [reduce using rule 10 (lvalue)]
    $default  reduce using rule 10 (lvalue)

    conditional  go to state 30
    ifthenelse   go to state 31
    ifthen       go to state 32

    shift/reduce conflict on token IF:
       10 lvalue: lvalueBricks •
       26 ifthenelse: • IF block THEN block_nonifthen ELSE chain
      First example: conditional
      Shift derivation
        chain
        ↳ conditional
      Second example: THEN block_nonifthen ELSE chain ELSE chain
      Reduce derivation
        chain
        ↳ THEN conditional
               ↳ ifthenelse
                 ↳ block_nonifthen ELSE chain ELSE chain

    shift/reduce conflict on token IF:
       10 lvalue: lvalueBricks •
       27 ifthen: • IF block THEN chain
      Example: lvalueBricks • IF block THEN chain
      Shift derivation
        chain
        ↳ chainBricks
          ↳ sum
            ↳ product
              ↳ rvalue
                ↳ lvalue
                  ↳ lvalueBricks conditional
                                 ↳ ifthen
                                   ↳ • IF block THEN chain
      Example: lvalueBricks • IF block THEN chain
      Reduce derivation
        chain
        ↳ chainBricks              conditional
          ↳ sum                    ↳ ifthen
            ↳ product                ↳ IF block THEN chain
              ↳ rvalue
                ↳ lvalue
                  ↳ lvalueBricks •



State 10

   12 assignment: lvalue • ASSIGN chain
   14 rvalue: lvalue •

    ASSIGN  shift, and go to state 33

    ASSIGN    [reduce using rule 14 (rvalue)]
    $default  reduce using rule 14 (rvalue)

    shift/reduce conflict on token ASSIGN:
       14 rvalue: lvalue •
       12 assignment: lvalue • ASSIGN chain
      First example: program lvalueBricks IF block THEN lvalue • ASSIGN chain ELSE chain EOL $end
      Shift derivation
        $accept
        ↳ program                                                                                     $end
          ↳ program block                                                                         EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ lvalue
                          ↳ lvalueBricks conditional
                                         ↳ ifthenelse
                                           ↳ IF block THEN block_nonifthen             ELSE chain
                                                           ↳ nullifiable_nonifthen
                                                             ↳ assignment
                                                               ↳ lvalue • ASSIGN chain
      Second example: program lvalueBricks IF block THEN lvalue • ASSIGN chain EOL $end
      Reduce derivation
        $accept
        ↳ program                                                                                $end
          ↳ program block                                                                    EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ assignment
                          ↳ lvalue                                              ASSIGN chain
                            ↳ lvalueBricks conditional
                                           ↳ ifthen
                                             ↳ IF block THEN chain
                                                             ↳ chainBricks
                                                               ↳ sum
                                                                 ↳ product
                                                                   ↳ rvalue
                                                                     ↳ lvalue •



State 11

   16 rvalue: assignment •
   39 nullifiable_nonifthen: assignment •

    CLOSED    reduce using rule 16 (rvalue)
    CLOSED    [reduce using rule 39 (nullifiable_nonifthen)]
    NULLIFY   reduce using rule 16 (rvalue)
    NULLIFY   [reduce using rule 39 (nullifiable_nonifthen)]
    EOL       reduce using rule 16 (rvalue)
    EOL       [reduce using rule 39 (nullifiable_nonifthen)]
    THEN      reduce using rule 16 (rvalue)
    THEN      [reduce using rule 39 (nullifiable_nonifthen)]
    ELSE      reduce using rule 16 (rvalue)
    ELSE      [reduce using rule 39 (nullifiable_nonifthen)]
    $default  reduce using rule 16 (rvalue)

    reduce/reduce conflict on tokens CLOSED, NULLIFY, EOL, THEN, ELSE:
       16 rvalue: assignment •
       39 nullifiable_nonifthen: assignment •
      Example: assignment •
      First reduce derivation
        nullifiable_nonifthen
        ↳ chain
          ↳ chainBricks
            ↳ sum
              ↳ product
                ↳ rvalue
                  ↳ assignment •
      Example: assignment •
      Second reduce derivation
        nullifiable_nonifthen
        ↳ assignment •



State 12

   17 product: rvalue •

    $default  reduce using rule 17 (product)


State 13

   18 product: product • TIMES rvalue
   19 sum: product •

    TIMES  shift, and go to state 34

    TIMES     [reduce using rule 19 (sum)]
    $default  reduce using rule 19 (sum)

    shift/reduce conflict on token TIMES:
       19 sum: product •
       18 product: product • TIMES rvalue
      Example: lvalue ASSIGN product • TIMES rvalue
      Shift derivation
        product
        ↳ rvalue
          ↳ assignment
            ↳ lvalue ASSIGN chain
                            ↳ chainBricks
                              ↳ sum
                                ↳ product
                                  ↳ product • TIMES rvalue
      Example: lvalue ASSIGN product • TIMES rvalue
      Reduce derivation
        product
        ↳ product                             TIMES rvalue
          ↳ rvalue
            ↳ assignment
              ↳ lvalue ASSIGN chain
                              ↳ chainBricks
                                ↳ sum
                                  ↳ product •



State 14

   20 sum: sum • PLUS product
   21 chainBricks: sum •

    PLUS  shift, and go to state 35

    PLUS      [reduce using rule 21 (chainBricks)]
    $default  reduce using rule 21 (chainBricks)

    shift/reduce conflict on token PLUS:
       21 chainBricks: sum •
       20 sum: sum • PLUS product
      Example: lvalue ASSIGN sum • PLUS product
      Shift derivation
        sum
        ↳ product
          ↳ rvalue
            ↳ assignment
              ↳ lvalue ASSIGN chain
                              ↳ chainBricks
                                ↳ sum
                                  ↳ sum • PLUS product
      Example: lvalue ASSIGN sum • PLUS product
      Reduce derivation
        sum
        ↳ sum                                 PLUS product
          ↳ product
            ↳ rvalue
              ↳ assignment
                ↳ lvalue ASSIGN chain
                                ↳ chainBricks
                                  ↳ sum •



State 15

   22 chainBricks: chainBricks • sum
   23 chain: chainBricks •
   24      | chainBricks • assignment
   25      | chainBricks • conditional

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    NUMBER    [reduce using rule 23 (chain)]
    VAR       [reduce using rule 23 (chain)]
    OPEN      [reduce using rule 23 (chain)]
    IF        [reduce using rule 23 (chain)]
    $default  reduce using rule 23 (chain)

    item          go to state 7
    conditional   go to state 36
    lvalueBricks  go to state 9
    lvalue        go to state 10
    assignment    go to state 37
    rvalue        go to state 12
    product       go to state 13
    sum           go to state 38
    ifthenelse    go to state 31
    ifthen        go to state 32

    shift/reduce conflict on token NUMBER:
       23 chain: chainBricks •
        3 item: • NUMBER
      Example: lvalue ASSIGN chainBricks • NUMBER
      Shift derivation
        nullifiable_nonifthen
        ↳ assignment
          ↳ lvalue ASSIGN chain
                          ↳ chainBricks
                            ↳ chainBricks sum
                                          ↳ product
                                            ↳ rvalue
                                              ↳ item
                                                ↳ • NUMBER
      Example: lvalue ASSIGN chainBricks • NUMBER
      Reduce derivation
        nullifiable_nonifthen
        ↳ chain
          ↳ chainBricks
            ↳ chainBricks                             sum
              ↳ sum                                   ↳ product
                ↳ product                               ↳ rvalue
                  ↳ rvalue                                ↳ item
                    ↳ assignment                            ↳ NUMBER
                      ↳ lvalue ASSIGN chain
                                      ↳ chainBricks •

    shift/reduce conflict on token OPEN:
       23 chain: chainBricks •
        4 item: • OPEN block CLOSED
      First example: program lvalue ASSIGN chainBricks • OPEN block CLOSED sum EOL $end
      Shift derivation
        $accept
        ↳ program                                                                                       $end
          ↳ program block                                                                           EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks
                            ↳ chainBricks                                                       sum
                              ↳ sum
                                ↳ product
                                  ↳ assignment
                                    ↳ lvalue ASSIGN chain
                                                    ↳ chainBricks
                                                      ↳ chainBricks sum
                                                                    ↳ product
                                                                      ↳ rvalue
                                                                        ↳ item
                                                                          ↳ • OPEN block CLOSED
      Second example: program lvalue ASSIGN chainBricks • OPEN block CLOSED EOL $end
      Reduce derivation
        $accept
        ↳ program                                                                                   $end
          ↳ program block                                                                       EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks
                            ↳ chainBricks                             sum
                              ↳ sum                                   ↳ product
                                ↳ product                               ↳ rvalue
                                  ↳ rvalue                                ↳ item
                                    ↳ assignment                            ↳ OPEN block CLOSED
                                      ↳ lvalue ASSIGN chain
                                                      ↳ chainBricks •

    shift/reduce conflict on token VAR:
       23 chain: chainBricks •
        7 lvalueBricks: • VAR
      Example: lvalue ASSIGN chainBricks • VAR ASSIGN chain
      Shift derivation
        nullifiable_nonifthen
        ↳ assignment
          ↳ lvalue ASSIGN chain
                          ↳ chainBricks assignment
                                        ↳ lvalue         ASSIGN chain
                                          ↳ lvalueBricks
                                            ↳ • VAR
      Example: lvalue ASSIGN chainBricks • VAR ASSIGN chain
      Reduce derivation
        nullifiable_nonifthen
        ↳ chain
          ↳ chainBricks                             assignment
            ↳ sum                                   ↳ lvalue         ASSIGN chain
              ↳ product                               ↳ lvalueBricks
                ↳ rvalue                                ↳ VAR
                  ↳ assignment
                    ↳ lvalue ASSIGN chain
                                    ↳ chainBricks •

    shift/reduce conflict on token IF:
       23 chain: chainBricks •
       26 ifthenelse: • IF block THEN block_nonifthen ELSE chain
      First example: program lvalue ASSIGN chainBricks • IF block THEN block_nonifthen ELSE chain conditional EOL $end
      Shift derivation
        $accept
        ↳ program                                                                                                              $end
          ↳ program block                                                                                                  EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks                                                                        conditional
                            ↳ sum
                              ↳ product
                                ↳ assignment
                                  ↳ lvalue ASSIGN chain
                                                  ↳ chainBricks conditional
                                                                ↳ ifthenelse
                                                                  ↳ • IF block THEN block_nonifthen ELSE chain
      Second example: program lvalue ASSIGN chainBricks • IF block THEN chain EOL $end
      Reduce derivation
        $accept
        ↳ program                                                                               $end
          ↳ program block                                                                   EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks                             conditional
                            ↳ sum                                   ↳ ifthen
                              ↳ product                               ↳ IF block THEN chain
                                ↳ rvalue
                                  ↳ assignment
                                    ↳ lvalue ASSIGN chain
                                                    ↳ chainBricks •

    shift/reduce conflict on token IF:
       23 chain: chainBricks •
       27 ifthen: • IF block THEN chain
      First example: program lvalue ASSIGN chainBricks • IF block THEN chain conditional EOL $end
      Shift derivation
        $accept
        ↳ program                                                                                         $end
          ↳ program block                                                                             EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks                                                   conditional
                            ↳ sum
                              ↳ product
                                ↳ assignment
                                  ↳ lvalue ASSIGN chain
                                                  ↳ chainBricks conditional
                                                                ↳ ifthen
                                                                  ↳ • IF block THEN chain
      Second example: program lvalue ASSIGN chainBricks • IF block THEN chain EOL $end
      Reduce derivation
        $accept
        ↳ program                                                                               $end
          ↳ program block                                                                   EOL
                    ↳ block_nonifthen
                      ↳ nullifiable_nonifthen
                        ↳ chain
                          ↳ chainBricks                             conditional
                            ↳ sum                                   ↳ ifthen
                              ↳ product                               ↳ IF block THEN chain
                                ↳ rvalue
                                  ↳ assignment
                                    ↳ lvalue ASSIGN chain
                                                    ↳ chainBricks •



State 16

   38 nullifiable_nonifthen: chain •

    $default  reduce using rule 38 (nullifiable_nonifthen)


State 17

    6 conditional: ifthenelse •
   40 nullifiable_nonifthen: ifthenelse •

    CLOSED    reduce using rule 6 (conditional)
    CLOSED    [reduce using rule 40 (nullifiable_nonifthen)]
    NULLIFY   reduce using rule 6 (conditional)
    NULLIFY   [reduce using rule 40 (nullifiable_nonifthen)]
    EOL       reduce using rule 6 (conditional)
    EOL       [reduce using rule 40 (nullifiable_nonifthen)]
    THEN      reduce using rule 6 (conditional)
    THEN      [reduce using rule 40 (nullifiable_nonifthen)]
    ELSE      reduce using rule 6 (conditional)
    ELSE      [reduce using rule 40 (nullifiable_nonifthen)]
    $default  reduce using rule 6 (conditional)

    reduce/reduce conflict on tokens CLOSED, NULLIFY, EOL, THEN, ELSE:
        6 conditional: ifthenelse •
       40 nullifiable_nonifthen: ifthenelse •
      Example: ifthenelse •
      First reduce derivation
        nullifiable_nonifthen
        ↳ chain
          ↳ chainBricks
            ↳ sum
              ↳ product
                ↳ rvalue
                  ↳ conditional
                    ↳ ifthenelse •
      Example: ifthenelse •
      Second reduce derivation
        nullifiable_nonifthen
        ↳ ifthenelse •



State 18

    5 conditional: ifthen •
   31 block_ifthen: ifthen •
   41 nullified_ifthen: ifthen • NULLIFY

    NULLIFY  shift, and go to state 39

    CLOSED    reduce using rule 5 (conditional)
    CLOSED    [reduce using rule 31 (block_ifthen)]
    NULLIFY   [reduce using rule 5 (conditional)]
    EOL       reduce using rule 5 (conditional)
    EOL       [reduce using rule 31 (block_ifthen)]
    THEN      reduce using rule 5 (conditional)
    THEN      [reduce using rule 31 (block_ifthen)]
    $default  reduce using rule 5 (conditional)

    shift/reduce conflict on token NULLIFY:
        5 conditional: ifthen •
       41 nullified_ifthen: ifthen • NULLIFY
      Example: ifthen • NULLIFY
      Shift derivation
        block
        ↳ block_ifthen
          ↳ sequence_ifthen
            ↳ nullified_ifthen
              ↳ ifthen • NULLIFY
      Example: ifthen • NULLIFY
      Reduce derivation
        block
        ↳ block_nonifthen
          ↳ sequence_nonifthen
            ↳ nullified_nonifthen
              ↳ nullifiable_nonifthen   NULLIFY
                ↳ chain
                  ↳ chainBricks
                    ↳ sum
                      ↳ product
                        ↳ rvalue
                          ↳ conditional
                            ↳ ifthen •

    reduce/reduce conflict on tokens CLOSED, EOL, THEN:
        5 conditional: ifthen •
       31 block_ifthen: ifthen •
      Example: ifthen •
      First reduce derivation
        block
        ↳ block_nonifthen
          ↳ nullifiable_nonifthen
            ↳ chain
              ↳ chainBricks
                ↳ sum
                  ↳ product
                    ↳ rvalue
                      ↳ conditional
                        ↳ ifthen •
      Example: ifthen •
      Second reduce derivation
        block
        ↳ block_ifthen
          ↳ ifthen •



State 19

    2 program: program block • EOL

    EOL  shift, and go to state 40


State 20

   28 block: block_ifthen •

    $default  reduce using rule 28 (block)


State 21

   29 block: block_nonifthen •

    $default  reduce using rule 29 (block)


State 22

   35 block_nonifthen: nullifiable_nonifthen •
   43 nullified_nonifthen: nullifiable_nonifthen • NULLIFY

    NULLIFY  shift, and go to state 41

    $default  reduce using rule 35 (block_nonifthen)


State 23

   42 nullified_ifthen: nullified_ifthen • NULLIFY
   45 sequence_ifthen: nullified_ifthen •

    NULLIFY  shift, and go to state 42

    $default  reduce using rule 45 (sequence_ifthen)


State 24

   44 nullified_nonifthen: nullified_nonifthen • NULLIFY
   48 sequence_nonifthen: nullified_nonifthen •

    NULLIFY  shift, and go to state 43

    $default  reduce using rule 48 (sequence_nonifthen)


State 25

   30 block_ifthen: sequence_ifthen •
   33             | sequence_ifthen • ifthen
   37 block_nonifthen: sequence_ifthen • nullifiable_nonifthen
   46 sequence_ifthen: sequence_ifthen • nullified_ifthen
   50 sequence_nonifthen: sequence_ifthen • nullified_nonifthen

    NUMBER  shift, and go to state 3
    VAR     shift, and go to state 4
    OPEN    shift, and go to state 5
    IF      shift, and go to state 6

    $default  reduce using rule 30 (block_ifthen)
